thy/LOFT/Examples/SQRL/iptables-save
# Generated by iptables-save v1.6.0 on Wed Mar 22 11:39:49 2017
*mangle
:PREROUTING ACCEPT [279:21277]
:INPUT ACCEPT [225:13872]
:FORWARD ACCEPT [54:7405]
:OUTPUT ACCEPT [82:540305]
:POSTROUTING ACCEPT [136:547710]
-A POSTROUTING -s 10.13.0.0/16 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Wed Mar 22 11:39:49 2017
# Generated by iptables-save v1.6.0 on Wed Mar 22 11:39:49 2017
*nat
:PREROUTING ACCEPT [2:104]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 10.13.42.161/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 10.13.42.161/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 10.13.42.161/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 10.13.42.161/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 10.13.42.161/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 10.13.42.161/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A PREROUTING -d 14.15.16.58/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.13.43.14
-A POSTROUTING -s 10.13.43.0/28 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 10.13.43.0/28 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 10.13.43.0/28 ! -d 10.13.43.0/28 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.13.43.0/28 ! -d 10.13.43.0/28 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.13.43.0/28 ! -d 10.13.43.0/28 -j MASQUERADE
-A POSTROUTING -o lup -j MASQUERADE
COMMIT
# Completed on Wed Mar 22 11:39:49 2017
# Generated by iptables-save v1.6.0 on Wed Mar 22 11:39:49 2017
*raw
:PREROUTING ACCEPT [271:20861]
:OUTPUT ACCEPT [74:535233]
:CouldBeSpoofed - [0:0]
:lupSpoofProtect - [0:0]
-A PREROUTING -i lup -j lupSpoofProtect
-A PREROUTING ! -s 10.13.42.136/29 -i ldit -j CouldBeSpoofed
-A PREROUTING ! -s 10.13.42.128/29 -i lmd -j CouldBeSpoofed
-A PREROUTING ! -s 10.13.42.144/28 -i loben -j CouldBeSpoofed
-A PREROUTING ! -s 10.13.41.0/27 -i wg -j CouldBeSpoofed
-A PREROUTING ! -s 10.13.42.160/28 -i wt -j CouldBeSpoofed
-A PREROUTING -i lua+ -j DROP
-A PREROUTING -i vpriv -j CouldBeSpoofed
-A PREROUTING ! -s 10.13.43.0/28 -i vshit -j CouldBeSpoofed
-A PREROUTING ! -s 10.13.43.16/28 -i vocb -j CouldBeSpoofed
-A CouldBeSpoofed -s 10.13.44.0/24 -i vpriv -j RETURN
-A CouldBeSpoofed -s 10.13.37.0/24 -i vpriv -j RETURN
-A CouldBeSpoofed -j DROP
-A lupSpoofProtect -s 192.168.0.0/16 -j DROP
-A lupSpoofProtect -s 10.0.0.0/8 -j DROP
-A lupSpoofProtect -s 172.16.0.0/12 -j DROP
-A lupSpoofProtect -d 192.168.0.0/16 -j DROP
-A lupSpoofProtect -d 10.0.0.0/8 -j DROP
-A lupSpoofProtect -d 172.16.0.0/12 -j DROP
COMMIT
# Completed on Wed Mar 22 11:39:49 2017
# Generated by iptables-save v1.6.0 on Wed Mar 22 11:39:49 2017
*filter
:INPUT DROP [1:44]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [82:540305]
:BasicSvc - [0:0]
:FromInternalF - [0:0]
:PError - [0:0]
:SSHLimit - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lmd -j ACCEPT
-A INPUT -i ldit -j ACCEPT
-A INPUT -i loben -j ACCEPT
-A INPUT -i wt -j ACCEPT
-A INPUT -i vpriv -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i vshit -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j SSHLimit
-A INPUT -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 4242 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i vshit -j BasicSvc
-A INPUT -i wg -j BasicSvc
-A INPUT -i lua -j BasicSvc
-A INPUT -i vshit -p tcp -m tcp --dport 20:21 -j ACCEPT
-A INPUT -i vocb -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -i lup -j LOG
-A INPUT -i lup -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -i lmd -j PError
-A INPUT -i ldit -j PError
-A INPUT -i loben -j PError
-A INPUT -i wt -j PError
-A INPUT -i vshit -j PError
-A INPUT -i wg -j PError
-A INPUT -i lua -j PError
-A INPUT -i vocb -j PError
-A FORWARD -d 10.0.0.0/8 -o lup -j DROP
-A FORWARD -i lup -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lmd -j FromInternalF
-A FORWARD -i ldit -j FromInternalF
-A FORWARD -i loben -j FromInternalF
-A FORWARD -i wt -j FromInternalF
-A FORWARD -i wg -m state --state ESTABLISHED -j FromInternalF
-A FORWARD -i vshit -m state --state ESTABLISHED -j FromInternalF
-A FORWARD -i vshit -o lup -j ACCEPT
-A FORWARD -i wg -o lup -j ACCEPT
-A FORWARD -i lua -o lup -j ACCEPT
-A FORWARD -o vshit -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -i vocb -o lup -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A FORWARD -i vocb -o lup -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A FORWARD -d 81.169.168.252/32 -i vocb -o lup -p udp -m udp --dport 1194 -j ACCEPT
-A FORWARD -d 81.169.168.252/32 -i vocb -o lup -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 141.76.2.4/32 -i vocb -o lup -p tcp -j ACCEPT
-A FORWARD -d 212.211.132.250/32 -i vocb -o lup -p tcp -j ACCEPT
-A FORWARD -d 212.211.132.32/32 -i vocb -o lup -p tcp -j ACCEPT
-A FORWARD -d 81.169.168.252/32 -i vocb -o lup -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 178.254.55.220/32 -i vocb -o lup -p tcp -m tcp --dport 1337 -j ACCEPT
-A BasicSvc -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A BasicSvc -p udp -m udp --dport 53 -j ACCEPT
-A BasicSvc -p tcp -m tcp --dport 15678 -j ACCEPT
-A BasicSvc -p tcp -m tcp --dport 80 -j ACCEPT
-A FromInternalF -o lmd -j ACCEPT
-A FromInternalF -o ldit -j ACCEPT
-A FromInternalF -o loben -j ACCEPT
-A FromInternalF -o wt -j ACCEPT
-A FromInternalF -o lup -j ACCEPT
-A FromInternalF -o vshit -j ACCEPT
-A FromInternalF -o wg -m state --state ESTABLISHED -j ACCEPT
-A PError -p tcp -j REJECT --reject-with tcp-reset
-A PError -p udp -j REJECT --reject-with icmp-port-unreachable
-A PError -j REJECT --reject-with icmp-proto-unreachable
-A SSHLimit -i lmd -j ACCEPT
-A SSHLimit -i ldit -j ACCEPT
-A SSHLimit -i loben -j ACCEPT
-A SSHLimit -i wt -j ACCEPT
-A SSHLimit -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A SSHLimit -m recent --set --name SSHA --mask 255.255.255.255 --rsource
-A SSHLimit -m recent --update --seconds 60 --hitcount 2 --name SSHA --mask 255.255.255.255 --rsource -j DROP
-A SSHLimit -j ACCEPT
COMMIT
# Completed on Wed Mar 22 11:39:49 2017
